fix(deploy): reject embedded carriage returns